Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27644

Hover highlight remains on a button when a modal window is opened in response to button click

XMLWordPrintable

    • a48508cd766b056d3cb5b6502cf269a8293bb5a5

      Use attached application to reproduce:

      1) Click on "Msg Box" button -> A modal message box opens. The hover highlight remains on "Msg Box" button.

      In Qt4, the hover highlight disappears from the button when message box opens. Trace shows that in Qt4 the "Msg Box" button gets leave event, but this doesn't happen on Qt5.

        1. CompleterTest.7z
          3 kB
          Miikka Heikkinen
        For Gerrit Dashboard: QTBUG-27644
        # Subject Branch Project Status CR V

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes